--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   lottie: ^2.1.0
   animated_splash_screen: ^1.3.0
   http: ^0.13.5
+  flutter_charts: ^0.5.0
+  fl_chart: ^0.55.2
+  syncfusion_flutter_charts: ^20.4.43
 
 dev_dependencies:
   flutter_test:
